fixed unsplash integration
